# google-search-console-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/agents/: gsc-ai-overviews-analyst.md  gsc-cannibalization-checker.md  gsc-content-optimizer.md  gsc-indexing-auditor.md  gsc-page-analyst.md  gsc-schema-auditor.md  gsc-seo-reporter.md  gsc-sitemap-auditor.md  gsc-traffic-doctor.md  python-gsc-specialist.md  security-reviewer.md  test-writer-pytest.md
.claude/commands/: add-tool.md  run-tests.md
.claude/skills/ai-overviews-impact/: SKILL.md
.claude/skills/cannibalization-check/: SKILL.md
.claude/skills/content-opportunities/: SKILL.md
.claude/skills/indexing-audit/: SKILL.md
.claude/skills/page-deep-dive/: SKILL.md
.claude/skills/python-clean-code/: SKILL.md
.claude/skills/schema-audit/: SKILL.md
.claude/skills/seo-weekly-report/: SKILL.md
.claude/skills/sitemap-audit/: SKILL.md
.claude/skills/traffic-drop-diagnosis/: SKILL.md
.claude/workflows/: mega-audit.js
.github/workflows/: publish.yml
docs/: architecture.md  google-setup.md  starter-prompt.md
docs/machine-readable/: adr-index.yaml  code-map.yaml  constraints.yaml  llms.txt  tech-decisions.yaml
docs/seo-knowledge/: comparison-rules.md  cwv-thresholds.md  local-seo-signals.md  serp-overlap-methodology.md
examples/: README.md  content-brief.md  full-audit.md  indexing-issues.md  keyword-opportunities.md  page-deep-dive.md  quick-audit.md  traffic-drop.md
src/gsc_mcp/: auth.py  cli.py  constants.py  meta.py  quota.py  registry.py  retry.py  server.py  url_safety.py
src/gsc_mcp/data/: schema_templates.json
src/gsc_mcp/tools/: analytics.py  content.py  cross.py  crux.py  drift.py  ga4.py  indexing.py  inspection.py  properties.py  seo.py  sitemaps.py  technical.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_cli.py  test_content.py  test_cross.py  test_crux.py  test_drift.py  test_ga4.py  test_indexing.py  test_inspection.py  test_properties.py  test_registry.py  test_scaffold.py  test_seo.py  test_seo_v2.py  test_sitemap_audit.py  test_sitemaps.py  test_sitemaps_v2.py  test_technical.py  test_url_safety.py  test_utilities.py  test_wave_b.py
