[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsc-mcp"
version = "0.3.0"
description = "Google Search Console MCP server — inspection + Indexing API in one tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-analytics-data>=0.18.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
gsc-mcp = "gsc_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gsc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
