[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsc-mcp"
version = "0.4.2"
description = "Google Search Console MCP server with 32 tools: search analytics, URL inspection, Indexing API, GA4, and cross-platform GSC+GA4 analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Florian Bruniaux", email = "florian@bruniaux.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-analytics-data>=0.18.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/FlorianBruniaux/google-search-console-mcp"
Repository = "https://github.com/FlorianBruniaux/google-search-console-mcp"

[project.scripts]
gsc-mcp = "gsc_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gsc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
